--- a/fonts.css
+++ b/fonts.css
@@ -155,6 +155,33 @@ body {
 }
 
 
+@media (max-width: 1166px) {
+	.header__link {
+		font-size: 14px;
+	}
+
+	.character__item_big,
+	.text__item_big {
+		font-size: 30px;
+	}
+	.button__item_link,
+	.button__item_link1 {
+		font-size: 11px;
+	}
+}
+
+@media (max-width: 1000px) {
+	.header__link {
+		font-size: 13px;
+	}
+}
+
+@media (max-width: 840px) {
+	.header__link {
+		font-size: 12px;
+	}
+}
+
 @media (max-width: 768px) {
 	.character__item_big {
 		font-size: 50px;
@@ -171,6 +198,42 @@ body {
 	.button__item_link {
 		font-size: 16px;
 		line-height: 20px;
+	}
+}
+
+@media (max-width: 700px) {
+	.character__item_big {
+		font-size: 45px;
+	}
+	.button__item_link {
+		font-size: 14px;
+	}
+}
+
+@media (max-width: 565px) {
+	.character__item_big {
+		font-size: 41px;
+	}
+	.button__item_link {
+		font-size: 13px;
+	}
+}
+
+@media (max-width: 441px) {
+	.character__item_big {
+		font-size: 30px;
+	}
+	.button__item_link {
+		font-size: 11px;
+	}
+}
+
+@media (max-width: 400px) {
+	.character__item_big {
+		font-size: 26px;
+	}
+	.button__item_link {
+		font-size: 10px;
 	}
 }
 
@@ -198,5 +261,23 @@ body {
 	.button__item_link {
 		font-size: 13px;
 		line-height: 16px;
+	}
+}
+
+@media (max-width: 357px) {
+	.character__item_big {
+		font-size: 25px;
+	}
+	.button__item_link {
+		font-size: 11px;
+	}
+}
+
+@media (max-width: 287px) {
+	.section-main__wrapper {
+		width: 94.5%;
+	}
+	.button__item_link {
+		font-size: 9px;
 	}
 }
