--- a/fonts.css
+++ b/fonts.css
@@ -1,283 +1,410 @@
-@font-face {
-	font-family: "Montserrat";
-	src: /*url("Fonts/montserrat-bold-webfont.woff2") format("woff2"),
-		 url("Fonts/montserrat-bold-webfont.woff") format("woff"),*/
-		 url("Fonts/Montserrat-Bold.otf") format("opentype"),
-		 url("Fonts/Montserrat-Bold.ttf") format("truetype");
+/* Шрифты */
+	@font-face {
+		font-family: "Montserrat";
+		src:	url("Fonts/Montserrat-Bold.otf") format("opentype"),
+					url("Fonts/Montserrat-Bold.ttf") format("truetype");
+		font-weight: 700;
+		font-style: normal;
+	}
 
-	font-weight: 700;
-	font-style: normal;
-}
+	@font-face {
+		font-family: "Montserrat";
+		src: url("Fonts/Montserrat-Medium.otf") format("opentype"),
+				 url("Fonts/Montserrat-Medium.ttf") format("truetype");
+		font-weight: 500;
+		font-style: normal;
+	}
 
-@font-face {
-	font-family: "Montserrat";
-	src: /*url("Fonts/montserrat-medium-webfont.woff") format("woff"),
-		 url("Fonts/montserrat-medium-webfont.woff2") format("woff2"),*/
-		 url("Fonts/Montserrat-Medium.otf") format("opentype"),
-		 url("Fonts/Montserrat-Medium.ttf") format("truetype");
-	font-weight: 500;
-	font-style: normal;
-}
+	@font-face {
+	  font-family: "Montserrat";
+	  src: url("Fonts/Montserrat-SemiBold.otf") format("opentype"),
+				 url("Fonts/Montserrat-SemiBold.ttf") format("truetype");
+	  font-weight: 600;
+	  font-style: normal;
+	}
 
-@font-face {
+	@font-face {
     font-family: "Montserrat";
-    src: /*url("Fonts/montserrat-semibold-webfont.woff2") format("woff2"),*/
-         /*url("Fonts/montserrat-semibold-webfont.woff") format("woff"),*/
-		 url("Fonts/Montserrat-SemiBold.otf") format("opentype"),
-		 url("Fonts/Montserrat-SemiBold.ttf") format("truetype");
-    font-weight: 600;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Montserrat";
-    src: /*url("Fonts/montserrat-regular-webfont.woff2") format("woff2"),
-         url("Fonts/montserrat-regular-webfont.woff") format("woff"),*/
-		 url("Fonts/Montserrat-Regular.otf") format("opentype"),
-		 url("Fonts/Montserrat-Regular.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-body {
-	font-family: "Montserrat";
-}
-
-/* Шапка */
-
-.header {
-	font-weight: 600;
-	font-size: 15px;
-	line-height: 18px;
-}
-
-/* Домашний экран */
-
-.section-main__title {
-	font-weight: 600;
-	font-size: 90px;
-	line-height: 110px;
-}
-
-.section-main__subtitle {
-	font-weight: 500;
-	font-size: 15px;
-	line-height: 18px;
-}
-
-.character__item_big,
-.text__item_big {
-	font-weight: 600;
-	font-size: 35px;
-	line-height: 43px;
-}
-
-.character__item_little {
-	font-size: 20px;
-	line-height: 24px;
-}
-
-.character__item_small {
-	font-weight: normal;
-	font-size: 12px;
-	line-height: 15px;
-}
-
-.button__item_link, 
-.button__item_link1 {
-	font-weight: 700;
-	font-size: 13px;
-	line-height: 16px
-}
-
-/* Второй экран*/
-
-.section-desc__title {
-	font-size: 68px;
-	line-height: 85px;
-}
-
-.text__title {
-	font-weight: 600;
-	font-size: 29px;
-	line-height: 37px;
-}
-
-.text__content {
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 18.4px;
-}
-
-.character__item_medium {
-	font-weight: 600;
-	font-size: 20px;
-	line-height: 18px;
-}
-
-/* Третий экран*/
-
-.text__subtitle {
-	font-weight: 600;
-	font-size: 30px;
-	line-height: 37px;
-}
-.score__item {
-	font-weight: 600;
-	font-size: 25px;
-	line-height: 30px;
-}
-.star {
-	font-weight: 700;
-	font-size: 17px;
-	line-height: 21px;
-}
-.star__title_add {
-	font-weight: 700;
-	font-size: 10px;
-	line-height: 12px;
-}
-
-.score {
-	font-weight: 600;
-	font-size: 50px;
-	line-height: 34px;
-}
-
-.safe-body {
-	font-weight: 600;
-}
-
-.item__line {
-	font-weight: 600;
-	font-size: 17px;
-	line-height: 15px;
-}
-
-
-@media (max-width: 1166px) {
-	.header__link {
-		font-size: 14px;
+    src: url("Fonts/Montserrat-Regular.otf") format("opentype"),
+		 		 url("Fonts/Montserrat-Regular.ttf") format("truetype");
+	  font-weight: normal;
+	  font-style: normal;
 	}
 
-	.character__item_big,
-	.text__item_big {
-		font-size: 30px;
+	body {
+		font-family: "Montserrat";
 	}
-	.button__item_link,
-	.button__item_link1 {
-		font-size: 11px;
-	}
-}
 
-@media (max-width: 1000px) {
-	.header__link {
-		font-size: 13px;
-	}
-}
 
-@media (max-width: 840px) {
-	.header__link {
-		font-size: 12px;
-	}
-}
+/* Desktop */
+	
+	/* Шапка */
+		.header {
+			font-weight: 600;
+			font-size: 15px;
+			line-height: 18px;
+		}
 
-@media (max-width: 768px) {
-	.character__item_big {
-		font-size: 50px;
-		line-height: 61px;
-	}
-	.character__item_little {
-		font-size: 20px;
-		line-height: 24px;
-	}
-	.character__item_small {
-		font-size: 12px;
-		line-height: 15px;
-	}
-	.button__item_link {
-		font-size: 16px;
-		line-height: 20px;
-	}
-}
+	/* Домашний экран */
+		.section-main__title {
+			font-weight: 600;
+			font-size: 90px;
+			line-height: 110px;
+		}
 
-@media (max-width: 700px) {
-	.character__item_big {
-		font-size: 45px;
-	}
-	.button__item_link {
-		font-size: 14px;
-	}
-}
+		.section-main__subtitle {
+			font-weight: 500;
+			font-size: 15px;
+			line-height: 18px;
+		}
 
-@media (max-width: 565px) {
-	.character__item_big {
-		font-size: 41px;
-	}
-	.button__item_link {
-		font-size: 13px;
-	}
-}
+		.character__item_big {
+			font-weight: 600;
+			font-size: 35px;
+			line-height: 40px;
+		}
 
-@media (max-width: 441px) {
-	.character__item_big {
-		font-size: 30px;
-	}
-	.button__item_link {
-		font-size: 11px;
-	}
-}
+		.character__item_little {
+			font-size: 20px;
+			line-height: 24px;
+		}
 
-@media (max-width: 400px) {
-	.character__item_big {
-		font-size: 26px;
-	}
-	.button__item_link {
-		font-size: 10px;
-	}
-}
+		.character__item_small {
+			font-weight: normal;
+			font-size: 12px;
+			line-height: 15px;
+		}
 
-@media (max-width: 375px) {
-	.section-main__title {
-		font-size: 50px;
-		line-height: 61px;
-	}
-	.section-main__subtitle {
-		font-size: 10px;
-		line-height: 12px;
-	}
-	.character__item_big {
-		font-size: 27px;
-		line-height: 33px;
-	}
-	.character__item_little {
-		font-size: 15px;
-		line-height: 18px;
-	}
-	.character__item_small {
-		font-size: 10px;
-		line-height: 12px;
-	}
-	.button__item_link {
-		font-size: 13px;
-		line-height: 16px;
-	}
-}
+		.button__item_link, 
+		.button__item_link-info {
+			font-weight: 700;
+			font-size: 13px;
+			line-height: 16px
+		}
 
-@media (max-width: 357px) {
-	.character__item_big {
-		font-size: 25px;
-	}
-	.button__item_link {
-		font-size: 11px;
-	}
-}
+	/* Второй экран*/
+		.section-desc__title {
+			font-size: 68px;
+			line-height: 85px;
+		}
 
-@media (max-width: 287px) {
-	.section-main__wrapper {
-		width: 94.5%;
+		.text__title {
+			font-weight: 600;
+			font-size: 30px;
+			line-height: 37px;
+		}
+
+		.text__content {
+			font-weight: 500;
+			font-size: 14px;
+			line-height: 18.4px;
+		}
+
+		.text__item_big {
+			font-weight: 600;
+			font-size: 35px;
+			line-height: 30px;
+		}
+
+		.character__item_medium {
+			font-weight: 600;
+			font-size: 20px;
+			line-height: 20px;
+		}
+
+	/* Третий экран*/
+		.score {
+			font-weight: 600;
+			font-size: 50px;
+			line-height: 30px;
+		}
+
+		.score__item {
+			font-weight: 600;
+			font-size: 25px;
+			line-height: 30px;
+		}
+
+		.star {
+			font-weight: 700;
+			font-size: 17px;
+			line-height: 21px;
+		}
+
+		.star__title_add {
+			font-weight: 700;
+			font-size: 10px;
+			line-height: 12px;
+		}	
+
+		.safe-body {
+			font-weight: 600;
+		}
+
+/* Адаптив первой секции */	
+	@media (max-width: 1130px) {
+		.header__link {	font-size: 13px;	}
+
+		.section-main__title {	font-size: 85px;	}
+
+		.character__item_font	{	font-size: 32px;	}
+
+		.character__item_little {	font-size: 18px;	}
+
+		.character__item_small {	font-size: 10px;}
+
+		.button__item_link,
+		.button__item_link-info {	font-size: 12px;	}
 	}
-	.button__item_link {
-		font-size: 9px;
+
+	@media (max-width: 768px) {
+		.section-main__title {	font-size: 90px;	}
+
+		.character__item_big {
+			font-size: 51px;
+			line-height: 50px;
+		}
+
+		.character__item_little {	font-size: 20px;	}
+
+		.button__item_link {	font-size: 16px;	}
 	}
-}
+
+	@media (max-width: 700px) {
+		.character__item_big {
+			font-size: 35px;
+			line-height: 40px;
+		}
+	}
+
+	@media (max-width: 510px) {
+		.section-main__title {	font-size: 80px;	}
+	}
+
+	@media (max-width: 375px) {
+		.section-main__title {	font-size: 50px;	}
+
+		.section-main__subtitle {	font-size: 10px;	}
+
+		.character__item_big {
+			font-size: 28px;
+			line-height: 39px;
+		}
+
+		.character__item_little {	font-size: 15px;	}
+
+		.character__item_small {
+			font-size: 9px;
+			line-height: 2px;
+		}
+	}
+
+/* Адаптив второй секции */
+	@media (max-width: 1265px) {
+		.text__title {
+			font-size: 25px;
+			line-height: 30px;
+		}
+
+		.text__content {
+			font-size: 12px;
+			line-height: 17.4px;
+		}
+
+		.character__item_medium {	font-size: 18px;	}
+
+		.button__item_link-info {	font-size: 12px;	}
+	}
+
+	@media (max-width: 990px) {
+		.section-desc__title {	font-size: 53px;	}
+
+		.text__title {	font-size: 21px;	}
+
+		.text__content {
+			font-size: 11px;
+			line-height: 18px;
+		}
+
+		.text__item_big {	font-size: 26px;	}
+
+		.character__item_little {	font-size: 14px;	}
+
+		.character__item_medium {	font-size: 15px;	}
+
+		.button__item_link-info {	font-size: 11px;	}
+	}
+
+	@media (max-width: 768px) {
+		.section-desc__title {
+    	font-size: 68px;
+   		line-height: 65px;
+   		font-weight: 600;
+		}
+
+		.text__title {
+			font-size: 30px;
+			line-height: 40px;
+		}
+
+		.text__content {
+			font-size: 14px;
+			line-height: 18.4px;
+		}
+
+		.text__item_big {
+			font-size: 35px;
+			line-height: 40px;
+		}
+
+		.character__item_little {	font-size: 20px;	}
+
+		.character__item_small {	font-size: 12px;	}
+
+		.character__item_medium {	font-size: 20px;	}
+
+		.button__item_link,
+		.button__item_link-info {	font-size: 16px;	}
+	}
+
+	@media (max-width: 726px) {
+		.text__title {	font-size: 25px;	}
+
+		.text__content {
+   		font-size: 12px;
+   		line-height: 17.4px;
+		}
+
+		.character__item_medium {	font-size: 15px;	}
+
+		.button__item_link,
+		.button__item_link-info {	font-size: 13px;	}
+	}
+
+	@media (max-width: 645px) {
+		.text__title {	font-size: 22px;	}
+
+		.text__content {
+    	font-size: 11px;
+   		line-height: 15.4px;
+		}
+
+		.character__item_medium {	font-size: 15px;	}
+
+		.character__item_little {
+    	font-size: 16px;
+   		line-height: 20px;
+		}
+		
+		.character__item_small {
+    	font-size: 10px;
+   		line-height: 13px;
+		}
+
+		.button__item_link,
+		.button__item_link-info {	font-size: 11px;	}
+	}
+
+	@media (max-width: 600px) {
+		.section-desc__title {	font-size: 58px;	}
+
+		.text__title {	font-size: 19px;	}
+
+		.text__content {	font-size: 10px;	}
+
+		.character__item_font {	font-size: 28px;	}
+
+		.character__item_medium {	font-size: 15px;	}
+	}
+
+	@media (max-width: 430px) {
+		.section-desc__title {	font-size: 53px;	}
+
+		.text__title {	font-size: 17px;	}
+
+		.character__item_medium {	font-size: 14px;	}
+
+		.character__item_font {	font-size: 26px;	}
+	}
+
+	@media (max-width: 375px) {
+		.text__title {	font-size: 29px;	}
+
+		.text__content {
+			font-size: 14px;
+		  line-height: 19px;
+		}
+
+		.button__item_link {	font-size: 13px;	}
+	}
+
+/* Адаптив третьей секции */	
+	@media (max-width: 1410px) {
+		.star {	font-size: 16px;	}
+
+		.score {	font-size: 38px;	}
+
+		.score__item {	font-size: 23px;	}
+	}
+
+	@media (max-width: 1265px) {
+		.star {
+			font-weight: 600;
+			font-size: 12px;
+		}
+	}
+
+	@media (max-width: 1150px) {
+		.star {
+			font-weight: 600;
+			font-size: 12px;
+		}
+
+		.score {
+			font-size: 28px;
+    	line-height: 27px;
+		}
+
+		.score__item {	font-size: 19px;	}
+	}
+
+	@media (max-width: 900px) {
+		.star {	font-size: 11px;	}
+
+		.star__title_add {	font-size: 7px;	}
+
+		.score {
+			font-size: 28px;
+    	line-height: 27px;
+		}
+
+		.score__item {	font-size: 19px;	}
+	}
+
+	@media (max-width: 768px) {
+		.star {
+			font-weight: 700;
+			font-size: 17px;
+		}
+
+		.star__title_add {	font-size: 10px;	}
+	}
+
+	@media (max-width: 726px) {
+		.star {	font-size: 13px;	}
+
+		.star__title_add {	font-size: 8px;	}
+
+		.star__item {	margin-right: 2px;	}
+	}
+
+	@media (max-width: 645px) {
+		.star {
+    	font-weight: 600;
+    	font-size: 11px;
+		}
+
+		.star__title_add {	font-size: 6px;	}
+
+		.star__item {	margin-right: 0;	}
+	}
